# hwfwm

./: .gitignore  README.md  build_db.py  database_queries.py  main.py  pyproject.toml
api/: api.py
conn/: db.py
controller/: index.py  user.py
data/: awakening_stones.csv  confluence_essence_list.csv  essence_list.csv  restricted_list.csv  sql_classes.py
virtualenv/: pyvenv.cfg
